Doc/force-app/main/default/objects/SFDC_Application__c/SFDC_Application__c.object-meta.xml
<CustomObject>
    <description>Junction object that links a candidate to a single Position.</description>
    <label>Application</label>
    <nameField>
        <displayFormat>APP-{000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>