Doc/force-app/main/default/objects/SFDC_Application__c/fields/Interview_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Interview_Scheduled__c</fullName>
    <label>Interview Scheduled</label>
    <type>Date</type>
</CustomField>