Doc/force-app/main/default/objects/SFDC_Application__c/fields/Offer_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Acceptance_Date__c</fullName>
    <label>Offer Acceptance Date</label>
    <type>Date</type>
</CustomField>