Doc/force-app/main/default/objects/SFDC_Application__c/fields/Resume_Sent_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>Resume_Sent_to_Manager__c</fullName>
    <inlineHelpText>Please enter the date the resume for this candidate was sent to the hiring manager for this position</inlineHelpText>
    <label>Resume Sent to Manager</label>
    <type>Date</type>
</CustomField>